--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "hoek": "^5.0.3",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.8",
     "node-sass": "^4.7.2",
