--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bson": ">=1.0.5",
     "connect-flash": "^0.1.1",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
